Bug 167034 - Gallery Graphics Bulleted list: first and second entry are not visible
Summary: Gallery Graphics Bulleted list: first and second entry are not visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium minor
Assignee: Michael Weghorn
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-15 20:12 UTC by Michael H
Modified: 2025-10-10 13:48 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue with qt6 on Plasma Wayland (306.15 KB, image/png)
2025-06-20 16:30 UTC, Michael Weghorn
Details
Simple Qt program not showing all submenu entries on Plasma Wayland (691 bytes, text/x-c++src)
2025-06-23 08:44 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael H 2025-06-15 20:12:50 UTC
Description:
When choosing a Graphics Bullet from the Gallery then the first and the second entry are not visible 

Steps to Reproduce:
1.create a presentation and use a template of your choice 
2.put the cursor in a line of one slide.
3.right click and choose "bullet and numbering"
4.change type in the dialog "bullet and numbering" to graphics
5.click "select image.."
6.click gallery nothing happens
7.click "select image.."
8.click gallery
9.the bullet list opens

Actual Results:
Its not possible to show the first and the second entry of the list, even when you try to scroll

Expected Results:
the list shows all entries when you scroll up and down.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
i use fedora 42 with kde 6. my screen resolution is 2256*1504@150%(scale)
Comment 1 Jessica 2025-06-16 07:04:07 UTC
I can confirm this bug in 

Version: 25.2.4.1 (X86_64) / LibreOffice Community
Build ID: 09303ce8b49f86f106fccd32b1324662053027cc
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

and 

Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 16; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: threaded

and in 
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 497a4090de8a33704df4101fc078a48c4cf71101
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: threaded
Comment 2 Saburo 2025-06-18 08:57:54 UTC
not reproduce on gtk3

bibisected with win64-24.2
bibisected with linux-64-24.2(SAL_USE_VCLPLUGIN=gen)

author	Michael Weghorn
commit f075fa01cb4f74185f13eb0a8d7f84cf1f47af49

tdf#141101 tdf#101886 a11y: Restore previous focus on col/line popup close
Don't request focus for the color window
before the menu button popup opens.
Comment 3 Michael Weghorn 2025-06-20 16:28:41 UTC
(In reply to Saburo from comment #2)
> not reproduce on gtk3
> 
> bibisected with win64-24.2
> bibisected with linux-64-24.2(SAL_USE_VCLPLUGIN=gen)
> 
> author	Michael Weghorn
> commit f075fa01cb4f74185f13eb0a8d7f84cf1f47af49
> 
> tdf#141101 tdf#101886 a11y: Restore previous focus on col/line popup close
> Don't request focus for the color window
> before the menu button popup opens.

What behavior was bibisected here?

I can confirm that

(In reply to Michael H from comment #0)
> 5.click "select image.."
> 6.click gallery nothing happens

, i.e. the need to click the menu item twice is caused by the above-mentioned commit.

Pending fix for that:
https://gerrit.libreoffice.org/c/core/+/186771

However, whether the first and second list in the menu can be seen seems unrelated to me.

I cannot reproduce that with SAL_USE_VCLPLUGIN=gen.
I can with qt6 on my laptop screen (for me, only the first menu entry is outside of the visible area), but not when moving the dialog to my external monitor (all is fine then). 
I'm not sure whether that's a LO bug or a Qt one.
Comment 4 Michael Weghorn 2025-06-20 16:30:56 UTC
Created attachment 201380 [details]
Screenshot of the issue with qt6 on Plasma Wayland
Comment 5 Michael Weghorn 2025-06-20 16:37:08 UTC
(In reply to Michael Weghorn from comment #3)
> However, whether the first and second list in the menu can be seen seems
> unrelated to me.
> 
> I cannot reproduce that with SAL_USE_VCLPLUGIN=gen.
> I can with qt6 on my laptop screen (for me, only the first menu entry is
> outside of the visible area), but not when moving the dialog to my external
> monitor (all is fine then). 
> I'm not sure whether that's a LO bug or a Qt one.

attachment 201380 [details] is a screenshot of that issue. The "blkpearl" menu entry isn't visible.
What might be relevant why it works on my external screen could be that that one doesn't have a task bar at the bottom, so has more vertical space (?).

I also don't see the problem when I start LibreOffice with environment variable QT_QPA_PLATFORM=xcb set, to force running the app on X11/XWayland instead of as a native Wayland client, in which case the menu overlaps the task bar (which doesn't happen on Wayland, s. screenshot).
To me, this smells a bit like a Qt or KWin bug.

@Michael H.: Are you also running a Wayland session? Can you confirm it works on X11/XWayland instead?

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7cafd6648d991d9f25466766042416e0c686074b
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7cafd6648d991d9f25466766042416e0c686074b
CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2025-06-20 19:22:05 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/94564497514c4419062d13abad057255df9f369d

tdf#167034 sd: Populate graphics bullet menu when creating dlg

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-06-20 20:36:20 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/433a2da37a4bff45fe99cfde1d874fa41c769a32

tdf#167034 sd: Populate graphics bullet menu when creating dlg

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael H 2025-06-20 21:22:41 UTC
(In reply to Michael Weghorn from comment #5)
> (In reply to Michael Weghorn from comment #3)
> > However, whether the first and second list in the menu can be seen seems
> > unrelated to me.
> > 
> > I cannot reproduce that with SAL_USE_VCLPLUGIN=gen.
> > I can with qt6 on my laptop screen (for me, only the first menu entry is
> > outside of the visible area), but not when moving the dialog to my external
> > monitor (all is fine then). 
> > I'm not sure whether that's a LO bug or a Qt one.
> 
> attachment 201380 [details] is a screenshot of that issue. The "blkpearl"
> menu entry isn't visible.
> What might be relevant why it works on my external screen could be that that
> one doesn't have a task bar at the bottom, so has more vertical space (?).
> 
> I also don't see the problem when I start LibreOffice with environment
> variable QT_QPA_PLATFORM=xcb set, to force running the app on X11/XWayland
> instead of as a native Wayland client, in which case the menu overlaps the
> task bar (which doesn't happen on Wayland, s. screenshot).
> To me, this smells a bit like a Qt or KWin bug.
> 
> @Michael H.: Are you also running a Wayland session? Can you confirm it
> works on X11/XWayland instead?
> 
> Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 7cafd6648d991d9f25466766042416e0c686074b
> CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+wayland)
> Locale: en-GB (en_GB.UTF-8); UI: en-US
> Calc: CL threaded
> 
> Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
> Build ID: 7cafd6648d991d9f25466766042416e0c686074b
> CPU threads: 32; OS: Linux 6.12; UI render: default; VCL: qt6 (cairo+xcb)
> Locale: en-GB (en_GB.UTF-8); UI: en-US
> Calc: CL threaded
@ Michael Weghorn: Yes, I normally use kde 6.x with wayland and I can confirm that it works with X11.
Comment 9 Michael Weghorn 2025-06-23 08:44:23 UTC
Created attachment 201426 [details]
Simple Qt program not showing all submenu entries on Plasma Wayland
Comment 10 Michael Weghorn 2025-06-23 08:46:33 UTC
(In reply to Michael H from comment #8)
> @ Michael Weghorn: Yes, I normally use kde 6.x with wayland and I can
> confirm that it works with X11.

Thanks for the feedback. I can reproduce the same problem with a simple Qt application (attachment 201426 [details]), so this indeed doesn't seem to be a LibreOffice bug, but a Qt (or maybe KWin?) bug. I've reported it upstream to Qt now:
https://bugreports.qt.io/browse/QTBUG-137955

I'll close this one here as fixed as the LibreOffice-specific problem has been fixed and the remaining part needs to be handled elsewhere.
Comment 11 Michael H 2025-06-23 09:22:33 UTC
Thank you for fixing!
Comment 12 Commit Notification 2025-06-25 04:15:16 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/c9e69f8d84e24de9b0d20ab1998a05161bdef05c

tdf#167034 sd: Populate graphics bullet menu when creating dlg

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.