tdf#167034 sd: Populate graphics bullet menu when creating dlg

Since

    commit f075fa01cb4f74185f13eb0a8d7f84cf1f47af49
    Author: Michael Weghorn <m.weghorn@posteo.de>
    Date:   Tue Aug 22 10:26:32 2023 +0200

        tdf#141101 tdf#101886 a11y: Restore previous focus on col/line popup close

, the menu button toggled handler is no more called before
the menu shows (at least for the VCL implementation).

Populate the menu entries in the SvxBulletAndPositionDlg
ctor instead, to ensure they are present when the menu gets
shown.

Change-Id: I02c65f11bfb532ecfb6e91578d26ea9dfc2e31a7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186771
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
(cherry picked from commit 94564497514c4419062d13abad057255df9f369d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186777
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>